<resources>
    <string name="app_name">CoBox</string>
    <string name="app_name_imageview">ImageView</string>
    <string name="app_name_listview">ListView</string>
    <string name="action_settings">Settings</string>
    <string name="action_revert">Revert</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_free">Free</string>
    <string name="action_1_1">1:1</string>
    <string name="action_4_3">4:3</string>
    <string name="action_3_4">3:4</string>
    <string name="action_16_9">16:9</string>
    <string name="action_9_16">9:16</string>
</resources>
